[gd_scene load_steps=24 format=3 uid="uid://bobsfc0dtj24t"]

[ext_resource type="StyleBox" uid="uid://dokl011h350b2" path="res://assets/styles/Window.tres" id="1_hrq6v"]
[ext_resource type="Script" uid="uid://duscvsrim4gn4" path="res://scripts/instructions.gd" id="1_lnhw6"]
[ext_resource type="FontFile" uid="uid://bsi4q0ff6yrdo" path="res://assets/fonts/Xolonium-Regular.ttf" id="2_vlgwb"]
[ext_resource type="Script" uid="uid://cbmhm6e16eofd" path="res://scripts/rotate_left_img.gd" id="4_lnhw6"]
[ext_resource type="Texture2D" uid="uid://bcfcno16vf3p8" path="res://assets/sprites/nanobot.svg" id="4_p5uur"]
[ext_resource type="PackedScene" uid="uid://bryp0fjw86bk1" path="res://scenes/general/Button.tscn" id="6_8l4ee"]
[ext_resource type="Script" uid="uid://bxf0irw8q71qh" path="res://scripts/rotate_right_img.gd" id="6_apdbs"]
[ext_resource type="Texture2D" uid="uid://ds3y6dil3rjx1" path="res://assets/sprites/bullet.svg" id="8_4xf6f"]
[ext_resource type="ButtonGroup" uid="uid://dbjovjf58tdjs" path="res://assets/button_groups/instructions.tres" id="10_hqvxw"]

[sub_resource type="LabelSettings" id="LabelSettings_74f57"]
font = ExtResource("2_vlgwb")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8l4ee"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="LabelSettings" id="LabelSettings_apdbs"]
font = ExtResource("2_vlgwb")
font_size = 64

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c1x4n"]
content_margin_left = 25.0
content_margin_right = 25.0

[sub_resource type="LabelSettings" id="LabelSettings_4xf6f"]
font = ExtResource("2_vlgwb")
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqvxw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Curve2D" id="Curve2D_4xf6f"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 178, 316, 0, 0, 0, 0, 178, 250, 0, 0, 0, 0, 178, 316)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_hqvxw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 316, 448, 0, 0, 0, 0, 1020, 448)
}
point_count = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xf6f"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.873298, 0.873298, 0.873298, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p5uur"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.255659, 0.255659, 0.255659, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxsq1"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.360784, 0.360784, 0.360784, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eemme"]
bg_color = Color(0.830335, 0.830335, 0.830335, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3yeu"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5d0d"]
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Instructions" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lnhw6")

[node name="InstructionContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -352.0
offset_right = 576.0
offset_bottom = 352.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_hrq6v")

[node name="Rotating" type="Control" parent="InstructionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="InstructionContainer/Rotating"]
custom_minimum_size = Vector2(2.605, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -574.5
offset_top = 52.0
offset_right = 574.5
offset_bottom = 130.0
grow_horizontal = 2
size_flags_vertical = 0
text = "Rotating:"
label_settings = SubResource("LabelSettings_74f57")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InstructionContainer/Rotating"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -361.0
offset_top = -50.0
offset_right = 361.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RotateLeft" type="VBoxContainer" parent="InstructionContainer/Rotating/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RotateLeft" type="HBoxContainer" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft"]
layout_mode = 2

[node name="A" type="Panel" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft/RotateLeft"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft/RotateLeft/A"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "A"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Or" type="Label" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft/RotateLeft"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c1x4n")
text = "OR"
label_settings = SubResource("LabelSettings_4xf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftArrow" type="Panel" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft/RotateLeft"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft/RotateLeft/LeftArrow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "←"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Rotating/HBoxContainer/RotateLeft"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_p5uur")
expand_mode = 1
stretch_mode = 4
script = ExtResource("4_lnhw6")

[node name="Panel" type="Panel" parent="InstructionContainer/Rotating/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hqvxw")

[node name="RotateRight" type="VBoxContainer" parent="InstructionContainer/Rotating/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="RotateRight" type="HBoxContainer" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight"]
layout_mode = 2

[node name="D" type="Panel" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight/RotateRight"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight/RotateRight/D"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "D"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Or" type="Label" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight/RotateRight"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c1x4n")
text = "OR"
label_settings = SubResource("LabelSettings_4xf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArrow" type="Panel" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight/RotateRight"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight/RotateRight/RightArrow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "→"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Rotating/HBoxContainer/RotateRight"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_p5uur")
expand_mode = 1
stretch_mode = 4
script = ExtResource("6_apdbs")

[node name="Moving" type="Control" parent="InstructionContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="InstructionContainer/Moving"]
custom_minimum_size = Vector2(2.605, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -574.5
offset_top = 52.0
offset_right = 574.5
offset_bottom = 130.0
grow_horizontal = 2
size_flags_vertical = 0
text = "Moving:"
label_settings = SubResource("LabelSettings_74f57")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InstructionContainer/Moving"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.5
offset_top = -300.0
offset_right = 179.5
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="InstructionContainer/Moving/VBoxContainer"]
layout_mode = 2

[node name="W" type="Panel" parent="InstructionContainer/Moving/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Moving/VBoxContainer/HBoxContainer/W"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "W"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Or" type="Label" parent="InstructionContainer/Moving/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c1x4n")
text = "OR"
label_settings = SubResource("LabelSettings_4xf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpArrow" type="Panel" parent="InstructionContainer/Moving/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Moving/VBoxContainer/HBoxContainer/UpArrow"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "↑"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Path2D" type="Path2D" parent="InstructionContainer/Moving/VBoxContainer"]
position = Vector2(0, 110)
curve = SubResource("Curve2D_4xf6f")

[node name="PathFollow2D" type="PathFollow2D" parent="InstructionContainer/Moving/VBoxContainer/Path2D"]
position = Vector2(178, 316)
rotation = -1.5708
rotates = false

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Moving/VBoxContainer/Path2D/PathFollow2D"]
custom_minimum_size = Vector2(200, 200)
offset_left = 121.0
offset_top = -100.0
offset_right = 321.0
offset_bottom = 100.0
rotation = 1.5708
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_p5uur")
expand_mode = 1
stretch_mode = 4

[node name="Shooting" type="Control" parent="InstructionContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="InstructionContainer/Shooting"]
custom_minimum_size = Vector2(2.605, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -574.5
offset_top = 52.0
offset_right = 574.5
offset_bottom = 130.0
grow_horizontal = 2
size_flags_vertical = 0
text = "Shooting:"
label_settings = SubResource("LabelSettings_74f57")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="InstructionContainer/Shooting"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.0
offset_top = -175.0
offset_right = 407.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Space" type="Panel" parent="InstructionContainer/Shooting/HBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Shooting/HBoxContainer/Space"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Space"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Or" type="Label" parent="InstructionContainer/Shooting/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_c1x4n")
text = "OR"
label_settings = SubResource("LabelSettings_4xf6f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enter" type="Panel" parent="InstructionContainer/Shooting/HBoxContainer"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8l4ee")

[node name="Label" type="Label" parent="InstructionContainer/Shooting/HBoxContainer/Enter"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Enter"
label_settings = SubResource("LabelSettings_apdbs")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Shooting"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_left = 292.0
offset_top = 348.0
offset_right = 492.0
offset_bottom = 548.0
rotation = 1.5708
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_p5uur")
expand_mode = 1
stretch_mode = 4

[node name="BulletPath" type="Path2D" parent="InstructionContainer/Shooting"]
curve = SubResource("Curve2D_hqvxw")

[node name="BulletPathFollow1" type="PathFollow2D" parent="InstructionContainer/Shooting/BulletPath"]
position = Vector2(316, 448)

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Shooting/BulletPath/BulletPathFollow1"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -25.0
offset_right = 2555.0
offset_bottom = 2401.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("8_4xf6f")

[node name="BulletPathFollow2" type="PathFollow2D" parent="InstructionContainer/Shooting/BulletPath"]
position = Vector2(456.797, 448)
progress = 140.8

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Shooting/BulletPath/BulletPathFollow2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -25.0
offset_right = 2555.0
offset_bottom = 2401.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("8_4xf6f")

[node name="BulletPathFollow3" type="PathFollow2D" parent="InstructionContainer/Shooting/BulletPath"]
position = Vector2(597.599, 448)
progress = 281.6

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Shooting/BulletPath/BulletPathFollow3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -25.0
offset_right = 2555.0
offset_bottom = 2401.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("8_4xf6f")

[node name="BulletPathFollow4" type="PathFollow2D" parent="InstructionContainer/Shooting/BulletPath"]
position = Vector2(738.401, 448)
progress = 422.4

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Shooting/BulletPath/BulletPathFollow4"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -25.0
offset_right = 2555.0
offset_bottom = 2401.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("8_4xf6f")

[node name="BulletPathFollow5" type="PathFollow2D" parent="InstructionContainer/Shooting/BulletPath"]
position = Vector2(879.203, 448)
progress = 563.2

[node name="TextureRect" type="TextureRect" parent="InstructionContainer/Shooting/BulletPath/BulletPathFollow5"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -25.0
offset_right = 2555.0
offset_bottom = 2401.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708
scale = Vector2(0.02, 0.02)
texture = ExtResource("8_4xf6f")

[node name="Back" parent="." instance=ExtResource("6_8l4ee")]
layout_mode = 0
offset_left = -595.0
offset_top = -355.0
offset_right = -389.0
offset_bottom = -277.0
text = "Back"

[node name="Left" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -608.0
offset_top = -92.0
offset_right = -480.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.266575, 0.266575, 0.266575, 1)
theme_override_fonts/font = ExtResource("2_vlgwb")
theme_override_font_sizes/font_size = 90
theme_override_styles/hover = SubResource("StyleBoxFlat_4xf6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p5uur")
theme_override_styles/normal = SubResource("StyleBoxFlat_jxsq1")
text = "←"

[node name="Right" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 480.0
offset_top = -92.0
offset_right = 608.0
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_colors/font_pressed_color = Color(0.266575, 0.266575, 0.266575, 1)
theme_override_fonts/font = ExtResource("2_vlgwb")
theme_override_font_sizes/font_size = 90
theme_override_styles/hover = SubResource("StyleBoxFlat_4xf6f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p5uur")
theme_override_styles/normal = SubResource("StyleBoxFlat_jxsq1")
text = "→"

[node name="InstructionButtons" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 230.0
offset_right = 49.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="RotatingButton" type="Button" parent="InstructionButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_eemme")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v3yeu")
theme_override_styles/normal = SubResource("StyleBoxFlat_q5d0d")
toggle_mode = true
button_pressed = true
button_group = ExtResource("10_hqvxw")

[node name="MovingButton" type="Button" parent="InstructionButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_eemme")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v3yeu")
theme_override_styles/normal = SubResource("StyleBoxFlat_q5d0d")
toggle_mode = true
button_group = ExtResource("10_hqvxw")

[node name="ShootingButton" type="Button" parent="InstructionButtons"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_eemme")
theme_override_styles/pressed = SubResource("StyleBoxFlat_v3yeu")
theme_override_styles/normal = SubResource("StyleBoxFlat_q5d0d")
toggle_mode = true
button_group = ExtResource("10_hqvxw")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Left" to="." method="_next_instruction" binds= [-1]]
[connection signal="pressed" from="Right" to="." method="_next_instruction" binds= [1]]
[connection signal="pressed" from="InstructionButtons/RotatingButton" to="." method="_change_instruction" binds= [0]]
[connection signal="pressed" from="InstructionButtons/MovingButton" to="." method="_change_instruction" binds= [1]]
[connection signal="pressed" from="InstructionButtons/ShootingButton" to="." method="_change_instruction" binds= [2]]
